--- a/chess.html
+++ b/chess.html
@@ -1044,7 +1044,7 @@
 			black_ai_box.checked = false
 			white_ai_box.checked = false
 			speak.checked = false
-			const re_move = /^(?<fullmove_number>\d+.\s*)?(?<char>[B-R]?)(?<from>[a-h]?[1-8]?)(?<attack>x?)(?<to>[a-h][1-8])(?<promo>[B-R]?)/
+			const re_move = /^(?<fullmove_number>\d+\.\s*)?(?<char>[B-R]?)(?<from>[a-h]?[1-8]?)(?<attack>x?)(?<to>[a-h][1-8])(?<promo>[B-R]?)/
 			let moves = movetext.split(/\s/)  // e.g. 1. e4 Nf6 2. e5 Ne4 3. d3 Nc5 4. d4 Ne4 5. Qd3 d5 6. exd6 Nxd6
 			let color = BLACK
 			for (const move of moves) {
