--- a/chess.html
+++ b/chess.html
@@ -28,7 +28,7 @@
 			cursor: pointer;
 			vertical-align: top;
 			font-size: 0.7em;
-    		height: 2em;
+			height: 2em;
 		}
 
 		input[type=number] {
@@ -128,8 +128,16 @@
 			background: darkgray;
 		}
 
-		input, label, li, textarea {
-			font-size: 0.5em;
+		input,
+		label,
+		li,
+		li>span,
+		textarea {
+			font-size: 5mm;
+		}
+
+		li>span {
+			cursor: pointer;
 		}
 
 		ol {
@@ -150,6 +158,7 @@
 	<input id="speak_white" type="checkbox"><label for="speak_white">white moves</label>
 	<div id="logtext"></div>
 	<div style="display:flex">
+		<button onclick="replay(movetextbox.value, true)" type="button">Instant</button>
 		<button onclick="replay(movetextbox.value)" type="button">Replay</button>
 		<textarea id="movetextbox" type="text" placeholder="movetext"></textarea>
 	</div>
@@ -442,11 +451,11 @@
 				const log = this.board.log
 				if ((this.y === 0 && this.color === WHITE && white_ai_box.checked)
 					|| (this.y === 7 && this.color === BLACK && black_ai_box.checked)) {
-						// 8/5KP1/7k/8/6P1/8/8/8 w - - 3 86
-						this.board.promote(...xy, 'N', this.color)
-						if (this.board.get_king(1 - this.color).is_safe()) {
-							this.board.promote(...xy, 'Q', this.color)
-						}
+					// 8/5KP1/7k/8/6P1/8/8/8 w - - 3 86
+					this.board.promote(...xy, 'N', this.color)
+					if (this.board.get_king(1 - this.color).is_safe()) {
+						this.board.promote(...xy, 'Q', this.color)
+					}
 					if (this.board.depth === 0) {
 						say("Promotion.")
 						this.board.log_check(log.pop() + this.board.xy2p(...xy).char, 1 - this.color)
@@ -776,7 +785,7 @@
 			let html = ''
 			let txt = ''
 			for (let i = 0; i < log.length; i += 2) {
-				html += `<li>${log[i]} ${log[i + 1] || ''}</li>`
+				html += `<li><span onclick="rewind(${i + 1})">${log[i]}</span> <span onclick="rewind(${i + 2})">${log[i + 1] || ''}</span></li>`
 				txt += `${1 + i / 2}. ${log[i]} ${log[i + 1] || ''} `
 			}
 			logtext.innerHTML = `<ol>${html}</ol>`
@@ -1033,7 +1042,7 @@
 			return ('0' + Math.floor(secs / 60)).slice(-2) + ':' + ('0' + Math.floor(secs % 60)).slice(-2)
 		}
 
-		window.replay = async function replay(movetext) {
+		window.replay = async function replay(movetext, instant) {
 			board.reset()
 			render(board)
 			const bai = black_ai_box.checked
@@ -1059,14 +1068,14 @@
 				if (mo) {
 					let from = mo.groups.from
 					const to = mo.groups.to
-					if(from.length < 2) {
+					const promo = mo.groups.promo
+					if (from.length < 2) {
 						const pieces = board.get_pieces(color)
-						for(const p of pieces) {
+						for (const p of pieces) {
 							if (p.char !== mo.groups.char) continue
 							const p_fr = xy2fr(p.x, p.y)
-							console.log(p_fr, p.color, p.char, '?')
 							const frs = p.get_moves().map(xy => xy2fr(...xy))
-							for(const fr of frs) {
+							for (const fr of frs) {
 								if (fr === to) {
 									if (from.length === 0) {
 										from = p_fr
@@ -1079,16 +1088,27 @@
 							}
 						}
 					}
-					await show_move(from, to)
+					if (instant) {
+						board.fr2p(from).move(fr2xy(to))
+					} else await show_move(from, to)
+					if (promo) {
+						board.promote(...fr2xy(to), promo, color)
+						board.log_check(board.log.pop() + promo, 1 - color)
+					}
 				}
 			}
+			if (instant) render(board)
 			black_ai_box.checked = bai
 			white_ai_box.checked = wai
 			speak.checked = spk
 		}
 
+		window.rewind = function rewind(index) {
+			replay(board.log.slice(0, index).join(" "), true)
+		}
+
 		window.test = async function test() {
-			await replay("1.Nb1a3 Nb8a6 2. d2d4 d7d5 3.Bc1h6 g7xh6 4.Qd1d3 Bf8g7 5. 0-0-0 Ng8f6 6. f2f4 0-0 7. h2h4 Nf6g4 8. f4f5 e7e5 9. f5e6 e.p. f7xe6 10.Qd3g3 Ng4e3 11.Qg3xe3 Qd8xh4 12.Rh1xh4 Rf8xf1 13.Rd1xf1 Bg7xd4 14.Qe3xd4 Na6b4 15.Qd4xb4 a7a5 16.Qb4g4+ Kg8h8 17.Rf1f8# 1-0")
+			await replay("1.Nb1a3 Nb8a6 2. d2d4 d7d5 3.Bc1h6 g7xh6 4.Qd1d3 Bf8g7 5. 0-0-0 Ng8f6 6. f2f4 0-0 7. h2h4 Nf6g4 8. f4f5 e7e5 9. f5e6 e.p. f7xe6 10.Qd3g3 Ng4e3 11.Qg3xe3 Qd8xh4 12.Rh1xh4 Rf8xf1 13.Rd1xf1 Bg7xd4 14.Qe3xd4 Na6b4 15.Qd4xb4 a7a5 16.Qb4g4+ Kg8h8 17.Rf1f8# 1-0", true)
 			console.assert(board.fen_export() === "r1b2R1k/1pp4p/4p2p/p2p4/6QR/N7/PPP1P1P1/2K3N1 b - - 3 17")
 		}
 
