--- a/synth.html
+++ b/synth.html
@@ -90,7 +90,8 @@
       background-color: #eef;
     }
 
-    .key:active, .active {
+    .key:active,
+    .active {
       background-color: #000;
       color: #fff;
     }
@@ -174,12 +175,21 @@
 
   <script>
     let audioContext
+    let synth_keys
+    let log = []
 
-    function key_note(down) {
+    function key_note(down, synth_key) {
       if (!audioContext) setup()
-      let synth_key = 'zxcvbnm,./asdfghjkl;\'qwertyuiop[]\\1234567890-=!@#$%^&*()_+'.indexOf(event.key)
-      const el_key = document.querySelectorAll('.key')[synth_key]
-      console.log(synth_key, event.key)
+      if (!synth_key) {
+        synth_key = 'zxcvbnm,./asdfghjkl;\'qwertyuiop[]\\1234567890-=!@#$%^&*()_+'.indexOf(event.key)
+        const entry = [parseInt(performance.now()), down, synth_key, event.key]
+        //console.log(entry)
+        if (synth_key >= 0) log.push(entry)
+        /* Where's this from??
+        '[[5375,1,1,"x"],[5464,0,1,"x"],[5524,1,1,"x"],[5625,0,1,"x"],[5661,1,1,"x"],[5793,0,1,"x"],[5804,1,2,"c"],[5947,0,2,"c"],[6097,1,3,"v"],[6238,0,3,"v"],[6391,1,1,"x"],[6486,0,1,"x"],[6559,1,1,"x"],[6637,0,1,"x"],[6681,1,1,"x"],[6790,0,1,"x"],[6830,1,1,"x"],[6930,0,1,"x"],[6971,1,2,"c"],[7082,0,2,"c"]]'
+        */
+      }
+      const el_key = synth_keys[synth_key]
       if (el_key) {
         if (down) {
           el_key.scrollIntoView()
@@ -194,6 +204,14 @@
     }
     addEventListener('keydown', () => key_note(1))
     addEventListener('keyup', () => key_note(0))
+
+    function replay() {
+      const base_time = log[0][0]
+      for (const entry of log) {
+        if (entry[1] === 1) setTimeout(() => notePressed({ buttons: 1, target: synth_keys[entry[2]] }), entry[0] - base_time)
+        else setTimeout(() => noteReleased({ buttons: 1, target: synth_keys[entry[2]] }), entry[0] - base_time)
+      }
+    }
 
     const oscList = [];
     let mainGainNode = null;
@@ -356,6 +374,8 @@
       for (let i = 0; i < 9; i++) {
         oscList[i] = {};
       }
+
+      synth_keys = document.querySelectorAll('.key')
     }
 
     function createKey(note, octave, freq) {
